--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,7 +57,8 @@ timber = "5.0.1"
 chart = "v3.1.0"
 leakcanary = "2.13"
 mockk = "1.13.10"
-slf4j = "2.0.12"
+slf4j = "1.7.36" # don't update to 2.x, unless the next one is also updated
+slf4j-timber = "3.1" # <- this one
 robolectric = "4.11.1"
 skydovesBallon = "1.6.4"
 moshiKotlin = "1.15.1"
@@ -196,7 +197,8 @@ memfault-cloud = { group = "com.memfault.cloud", name = "cloud-android", version
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 chart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "chart" }
 leakcanary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
-test-slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+slf4j-core = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+slf4j-timber = { group = "com.arcao", name = "slf4j-timber", version.ref = "slf4j-timber" }
 test-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 test-robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 skydoves-ballon = { group = "com.github.skydoves", name = "balloon-compose", version.ref = "skydovesBallon" }
