--- a/renovate.json
+++ b/renovate.json
@@ -10,19 +10,10 @@
   "packageRules": [
     {
       "matchPackagePatterns": [
-        "androidx.compose.compiler:compiler"
-      ],
-      "groupName": "kotlin"
-    },
-    {
-      "matchPackagePatterns": [
-        "org.jetbrains.kotlin.*"
-      ],
-      "groupName": "kotlin"
-    },
-    {
-      "matchPackagePatterns": [
-        "com.google.devtools.ksp"
+        "androidx.compose.compiler:compiler",
+        "com.google.devtools.ksp",
+        "org.jetbrains.kotlin.*",
+        "^androidx.compose.compiler"
       ],
       "groupName": "kotlin"
     },
