--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
 accompanist = "0.34.0"
 androidDesugarJdkLibs = "2.0.4"
-androidGradlePlugin = "8.2.2"
-androidxActivity = "1.8.2"
+androidGradlePlugin = "8.3.2"
+androidxActivity = "1.9.0"
 androidxAnnotation = "1.7.1"
 androidxAppCompat = "1.6.1"
-androidxComposeBom = "2024.01.00" # https://developer.android.com/jetpack/compose/bom/bom-mapping
-androidxComposeCompiler = "1.5.7" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+androidxComposeBom = "2024.04.01" # https://developer.android.com/jetpack/compose/bom/bom-mapping
+androidxComposeCompiler = "1.5.11" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin
 androidxComposeRuntimeTracing = "1.0.0-beta01"
-androidxCore = "1.12.0"
+androidxCore = "1.13.0"
 androidxCoreSplashscreen = "1.0.1"
-androidxDataStore = "1.0.0"
+androidxDataStore = "1.1.0"
 androidxEspresso = "3.5.1"
-androidxHiltNavigationCompose = "1.1.0"
+androidxHiltNavigationCompose = "1.2.0"
 androidxLifecycle = "2.7.0"
 androidxLocalbroadcastmanager = "1.1.0"
-androidxMacroBenchmark = "1.2.3"
-androidxNavigation = "2.7.6"
+androidxMacroBenchmark = "1.2.4"
+androidxNavigation = "2.7.7"
 androidxMetrics = "1.0.0-beta01"
 androidxProfileinstaller = "1.3.1"
 androidxStartup = "1.1.1"
@@ -28,62 +28,62 @@ androidxTestRules = "1.5.0"
 androidxTracing = "1.2.0"
 androidxUiAutomator = "2.2.0"
 androidxWork = "2.9.0"
-coil = "2.5.0"
-firebaseBom = "32.7.1"
-hilt = "2.50"
-hiltExt = "1.1.0"
+coil = "2.6"
+firebaseBom = "32.8.1"
+hilt = "2.51.1"
+hiltExt = "1.2.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
-kotlin = "1.9.21"
-kotlinxCoroutines = "1.7.3"
+kotlin = "1.9.23"
+kotlinxCoroutines = "1.8.0"
 kotlinxDatetime = "0.5.0"
-kotlinxSerializationJson = "1.6.2"
+kotlinxSerializationJson = "1.6.3"
 kotlinCompose = "1.5.11"
-ksp = "1.9.21-1.0.16"
+ksp = "1.9.23-1.0.28"
 lint = "31.2.2"
 memfault-cloud = "2.0.5"
 okhttp = "5.0.0-alpha.12"
 protobuf = "3.25.2"
 protobufPlugin = "0.9.4"
 publishPlugin = "1.2.1"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 room = "2.6.1"
 paging = "3.2.1"
 secrets = "2.0.1"
 turbine = "1.0.0"
 markdown = "0.3.6"
-wirePlugin = "4.9.3"
+wirePlugin = "4.9.9"
 timber = "5.0.1"
 chart = "v3.1.0"
-leakcanary = "2.13"
+leakcanary = "2.14"
 mockk = "1.13.9"
 slf4j = "2.0.11"
-robolectric = "4.11.1"
+robolectric = "4.12.1"
 skydovesBallon = "1.6.4"
 moshiKotlin = "1.15.0"
 moshiAdapters = "1.15.0"
-moshiConverter = "2.9.0"
+moshiConverter = "2.11.0"
 moshi = "1.15.0"
 moshiKotlinCodegen = "1.15.0"
-material3 = "1.2.0-rc01"
-material = "1.6.0"
-koinCore = "3.5.3"
-koinCompose = "1.1.2"
-kmmUuid = "0.8.2"
+material3 = "1.2.1"
+material = "1.6.6"
+koinCore = "3.5.6"
+koinCompose = "1.1.5"
+kmmUuid = "0.8.4"
 kmmVoyager = "1.0.0"
 kmmLogs = "2.7.1"
 gson = "2.10.1"
 
 nordic-blek = "1.0.14"
-nordic-ble = "2.7.2"
+nordic-ble = "2.7.4"
 nordic-dfu = "2.4.2"
 nordic-log = "2.3.0"
 nordic-mcumgr = "1.9.2"
 nordic-scanner = "1.6.0"
-nordic-common = "1.9.4"
+nordic-common = "1.9.5"
 nordic-memfault = "1.0.2"
 nordicPlugins = "1.11.1"
-dokkaPlugin = "1.9.10"
+dokkaPlugin = "1.9.20"
 googleServicesPlugins = "4.4.0"
 firebaseCrashlyticsPlugins = "2.9.9"
 kmmIosPublishPlugin = "2.0.3"
@@ -171,6 +171,7 @@ kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime",
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 lint-api = { group = "com.android.tools.lint", name = "lint-api", version.ref = "lint" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+okhttp-tls = { group = "com.squareup.okhttp3", name = "okhttp-tls", version.ref = "okhttp" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 protobuf-protoc = { group = "com.google.protobuf", name = "protoc", version.ref = "protobuf" }
 protobuf-kotlin-lite = { group = "com.google.protobuf", name = "protobuf-kotlin-lite", version.ref = "protobuf" }
