--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ androidxActivity = "1.9.0"
 androidxAnnotation = "1.7.1"
 androidxAppCompat = "1.6.1"
 androidxComposeBom = "2024.04.01" # https://developer.android.com/jetpack/compose/bom/bom-mapping
-androidxComposeCompiler = "1.5.11" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+androidxComposeCompiler = "1.5.12" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin
 androidxComposeRuntimeTracing = "1.0.0-beta01"
 androidxCore = "1.13.0"
 androidxCoreSplashscreen = "1.0.1"
@@ -26,7 +26,7 @@ androidxTestExt = "1.1.5"
 androidxTestRunner = "1.5.2"
 androidxTestRules = "1.5.0"
 androidxTracing = "1.2.0"
-androidxUiAutomator = "2.2.0"
+androidxUiAutomator = "2.3.0"
 androidxWork = "2.9.0"
 coil = "2.6"
 firebaseBom = "32.8.1"
@@ -38,12 +38,12 @@ kotlin = "1.9.23"
 kotlinxCoroutines = "1.8.0"
 kotlinxDatetime = "0.5.0"
 kotlinxSerializationJson = "1.6.3"
-kotlinCompose = "1.5.11"
+kotlinCompose = "1.6.2"
 ksp = "1.9.23-1.0.20"
-lint = "31.2.2"
+lint = "31.3.2"
 memfault-cloud = "2.0.5"
-okhttp = "5.0.0-alpha.12"
-protobuf = "3.25.2"
+okhttp = "5.0.0-alpha.14"
+protobuf = "4.26.1"
 protobufPlugin = "0.9.4"
 publishPlugin = "1.2.1"
 retrofit = "2.11.0"
@@ -56,15 +56,16 @@ wirePlugin = "4.9.9"
 timber = "5.0.1"
 chart = "v3.1.0"
 leakcanary = "2.14"
-mockk = "1.13.9"
-slf4j = "2.0.11"
+mockk = "1.13.10"
+slf4j = "1.7.36" # don't update to 2.x, unless the next one is also updated
+slf4j-timber = "3.1" # <- this one
 robolectric = "4.12.1"
 skydovesBallon = "1.6.4"
-moshiKotlin = "1.15.0"
-moshiAdapters = "1.15.0"
+moshiKotlin = "1.15.1"
+moshiAdapters = "1.15.1"
 moshiConverter = "2.11.0"
-moshi = "1.15.0"
-moshiKotlinCodegen = "1.15.0"
+moshi = "1.15.1"
+moshiKotlinCodegen = "1.15.1"
 material3 = "1.2.1"
 material = "1.6.6"
 koinCore = "3.5.6"
@@ -74,10 +75,11 @@ kmmVoyager = "1.0.0"
 kmmLogs = "2.7.1"
 gson = "2.10.1"
 
-nordic-blek = "1.0.14"
+nordic-blek = "1.0.15"
 nordic-ble = "2.7.4"
 nordic-dfu = "2.4.2"
 nordic-log = "2.3.0"
+nordic-data = "0.1.0"
 nordic-mcumgr = "1.9.2"
 nordic-scanner = "1.6.0"
 nordic-common = "1.9.5"
@@ -197,7 +199,9 @@ memfault-cloud = { group = "com.memfault.cloud", name = "cloud-android", version
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 chart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "chart" }
 leakcanary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
-test-slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+slf4j = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
+slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+slf4j-timber = { group = "com.arcao", name = "slf4j-timber", version.ref = "slf4j-timber" }
 test-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 test-robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 skydoves-ballon = { group = "com.github.skydoves", name = "balloon-compose", version.ref = "skydovesBallon" }
@@ -222,11 +226,11 @@ nordic-mcumgr-ble = { group = "no.nordicsemi.android", name = "mcumgr-ble", vers
 nordic-log = { group = "no.nordicsemi.android", name = "log", version.ref = "nordic-log" }
 nordic-log-timber = { group = "no.nordicsemi.android", name = "log-timber", version.ref = "nordic-log" }
 nordic-scanner = { group = "no.nordicsemi.android.support.v18", name = "scanner", version.ref = "nordic-scanner" }
+nordic-kotlin-data = { group = "no.nordicsemi.kotlin", name = "data", version.ref = "nordic-data" }
 nordic-core = { group = "no.nordicsemi.android.common", name = "core", version.ref = "nordic-common" }
 nordic-theme = { group = "no.nordicsemi.android.common", name = "theme", version.ref = "nordic-common" }
 nordic-analytics = { group = "no.nordicsemi.android.common", name = "analytics", version.ref = "nordic-common" }
 nordic-navigation = { group = "no.nordicsemi.android.common", name = "navigation", version.ref = "nordic-common" }
-nordic-uilogger = { group = "no.nordicsemi.android.common", name = "uilogger", version.ref = "nordic-common" }
 nordic-logger = { group = "no.nordicsemi.android.common", name = "logger", version.ref = "nordic-common" }
 nordic-permissions-nfc = { group = "no.nordicsemi.android.common", name = "permissions-nfc", version.ref = "nordic-common" }
 nordic-permissions-ble = { group = "no.nordicsemi.android.common", name = "permissions-ble", version.ref = "nordic-common" }
