--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -66,7 +66,7 @@ moshiAdapters = "1.15.1"
 moshiConverter = "2.11.0"
 moshi = "1.15.1"
 moshiKotlinCodegen = "1.15.1"
-material3 = "1.2.1"
+material3 = "1.3.0-beta02"
 material = "1.6.6"
 koinCore = "3.5.6"
 koinCompose = "1.1.5"
@@ -75,7 +75,7 @@ kmmVoyager = "1.0.0"
 kmmLogs = "2.7.1"
 gson = "2.10.1"
 
-nordic-blek = "1.0.16"
+nordic-blek = "1.0.17"
 nordic-ble = "2.7.4"
 nordic-dfu = "2.4.2"
 nordic-log = "2.3.0"
