--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
 accompanist = "0.34.0"
 androidDesugarJdkLibs = "2.0.4"
-androidGradlePlugin = "8.3.0"
-androidxActivity = "1.8.2"
-androidxAnnotation = "1.7.1"
-androidxAppCompat = "1.6.1"
-androidxComposeBom = "2024.02.02" # https://developer.android.com/jetpack/compose/bom/bom-mapping
-androidxComposeCompiler = "1.5.10" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+androidGradlePlugin = "8.5.0"
+androidxActivity = "1.9.0"
+androidxAnnotation = "1.8.0"
+androidxAppCompat = "1.7.0"
+androidxComposeBom = "2024.06.00" # https://developer.android.com/jetpack/compose/bom/bom-mapping
+androidxComposeCompiler = "1.5.14" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin
 androidxComposeRuntimeTracing = "1.0.0-beta01"
-androidxCore = "1.12.0"
+androidxCore = "1.13.1"
 androidxCoreSplashscreen = "1.0.1"
-androidxDataStore = "1.0.0"
+androidxDataStore = "1.1.1"
 androidxEspresso = "3.5.1"
 androidxHiltNavigationCompose = "1.2.0"
-androidxLifecycle = "2.7.0"
+androidxLifecycle = "2.8.2"
 androidxLocalbroadcastmanager = "1.1.0"
-androidxMacroBenchmark = "1.2.3"
+androidxMacroBenchmark = "1.2.4"
 androidxNavigation = "2.7.7"
 androidxMetrics = "1.0.0-beta01"
 androidxProfileinstaller = "1.3.1"
 androidxStartup = "1.1.1"
-androidxWindowManager = "1.2.0"
+androidxWindowManager = "1.3.0"
 androidxTestCore = "1.5.0"
 androidxTestExt = "1.1.5"
 androidxTestRunner = "1.5.2"
@@ -29,62 +29,61 @@ androidxTracing = "1.2.0"
 androidxUiAutomator = "2.3.0"
 androidxWork = "2.9.0"
 coil = "2.6.0"
-firebaseBom = "32.7.4"
-hilt = "2.51"
+firebaseBom = "33.1.0"
+hilt = "2.51.1"
 hiltExt = "1.2.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
-kotlin = "1.9.22"
+kotlin = "1.9.24"
 kotlinxCoroutines = "1.8.0"
 kotlinxDatetime = "0.5.0"
 kotlinxSerializationJson = "1.6.3"
-kotlinCompose = "1.6.0"
-ksp = "1.9.22-1.0.18"
-lint = "31.3.0"
+kotlinCompose = "1.6.11"
+ksp = "1.9.24-1.0.20"
+lint = "31.5.0"
 memfault-cloud = "2.0.5"
-okhttp = "5.0.0-alpha.12"
-protobuf = "3.25.3"
+okhttp = "5.0.0-alpha.14"
+protobuf = "4.27.1"
 protobufPlugin = "0.9.4"
 publishPlugin = "1.2.1"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 room = "2.6.1"
-paging = "3.2.1"
+paging = "3.3.0"
 secrets = "2.0.1"
 turbine = "1.1.0"
-markdown = "0.3.6"
-wirePlugin = "4.9.7"
+markdown = "0.4.1"
+wirePlugin = "4.9.9"
 timber = "5.0.1"
 chart = "v3.1.0"
-leakcanary = "2.13"
-mockk = "1.13.10"
+leakcanary = "2.14"
+mockk = "1.13.11"
 slf4j = "1.7.36" # don't update to 2.x, unless the next one is also updated
 slf4j-timber = "3.1" # <- this one
-robolectric = "4.11.1"
-skydovesBallon = "1.6.4"
+robolectric = "4.12.2"
+skydovesBallon = "1.6.5"
 moshiKotlin = "1.15.1"
 moshiAdapters = "1.15.1"
-moshiConverter = "2.9.0"
 moshi = "1.15.1"
 moshiKotlinCodegen = "1.15.1"
-material3 = "1.2.1"
-material = "1.6.3"
-koinCore = "3.5.3"
-koinCompose = "1.1.2"
-kmmUuid = "0.8.2"
+material3 = "1.3.0-beta03"
+material = "1.6.8"
+koinCore = "3.5.6"
+koinCompose = "1.1.5"
+kmmUuid = "0.8.4"
 kmmVoyager = "1.0.0"
 kmmLogs = "2.7.1"
-gson = "2.10.1"
+gson = "2.11.0"
 
-nordic-blek = "2.0.0"
-nordic-ble = "2.7.3"
-nordic-dfu = "2.4.2"
+nordic-blek = "1.1.0"
+nordic-ble = "2.7.5"
+nordic-dfu = "2.5.0"
 nordic-log = "2.3.0"
 nordic-data = "0.1.0"
 nordic-mcumgr = "1.9.2"
 nordic-scanner = "1.6.0"
 nordic-common = "2.0.0"
 nordic-memfault = "1.0.2"
-nordicPlugins = "2.0.0"
+nordicPlugins = "2.1.0"
 dokkaPlugin = "1.9.20"
 googleServicesPlugins = "4.4.0"
 firebaseCrashlyticsPlugins = "2.9.9"
@@ -174,6 +173,7 @@ kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime",
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 lint-api = { group = "com.android.tools.lint", name = "lint-api", version.ref = "lint" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+okhttp-tls = { group = "com.squareup.okhttp3", name = "okhttp-tls", version.ref = "okhttp" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 protobuf-protoc = { group = "com.google.protobuf", name = "protoc", version.ref = "protobuf" }
 protobuf-kotlin-lite = { group = "com.google.protobuf", name = "protobuf-kotlin-lite", version.ref = "protobuf" }
@@ -199,14 +199,14 @@ memfault-cloud = { group = "com.memfault.cloud", name = "cloud-android", version
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 chart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "chart" }
 leakcanary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary" }
-slf4j = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+slf4j = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
+slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
 slf4j-timber = { group = "com.arcao", name = "slf4j-timber", version.ref = "slf4j-timber" }
 test-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 test-robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 skydoves-ballon = { group = "com.github.skydoves", name = "balloon-compose", version.ref = "skydovesBallon" }
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiKotlin" }
 moshi-adapters = { group = "com.squareup.moshi", name = "moshi-adapters", version.ref = "moshiAdapters" }
-moshi-converter = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "moshiConverter" }
 moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
 moshi-kotlin-codegen = { group = "com.squareup.moshi", name = "moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koinCore" }
@@ -231,21 +231,20 @@ nordic-theme = { group = "no.nordicsemi.android.common", name = "theme", version
 nordic-analytics = { group = "no.nordicsemi.android.common", name = "analytics", version.ref = "nordic-common" }
 nordic-navigation = { group = "no.nordicsemi.android.common", name = "navigation", version.ref = "nordic-common" }
 nordic-logger = { group = "no.nordicsemi.android.common", name = "logger", version.ref = "nordic-common" }
-nordic-scanner = { group = "no.nordicsemi.android.common", name = "scanner", version.ref = "nordic-common" }
 nordic-permissions-nfc = { group = "no.nordicsemi.android.common", name = "permissions-nfc", version.ref = "nordic-common" }
 nordic-permissions-ble = { group = "no.nordicsemi.android.common", name = "permissions-ble", version.ref = "nordic-common" }
 nordic-permissions-internet = { group = "no.nordicsemi.android.common", name = "permissions-internet", version.ref = "nordic-common" }
+nordic-permissions-wifi = { group = "no.nordicsemi.android.common", name = "permissions-wifi", version.ref = "nordic-common" }
 nordic-memfault = { group = "no.nordicsemi.android", name = "memfault", version.ref = "nordic-memfault" }
 
 # BleK
-nordic-blek-client-android = { group = "no.nordicsemi.android.kotlin.ble", name = "client-android", version.ref = "nordic-blek" }
-nordic-blek-client-mock = { group = "no.nordicsemi.android.kotlin.ble", name = "client-mock", version.ref = "nordic-blek" }
-nordic-blek-server-android = { group = "no.nordicsemi.android.kotlin.ble", name = "server-android", version.ref = "nordic-blek" }
-nordic-blek-server-mock = { group = "no.nordicsemi.android.kotlin.ble", name = "server-mock", version.ref = "nordic-blek" }
+nordic-blek-client = { group = "no.nordicsemi.android.kotlin.ble", name = "client", version.ref = "nordic-blek" }
+nordic-blek-server = { group = "no.nordicsemi.android.kotlin.ble", name = "server", version.ref = "nordic-blek" }
 nordic-blek-profile = { group = "no.nordicsemi.android.kotlin.ble", name = "profile", version.ref = "nordic-blek" }
 nordic-blek-core = { group = "no.nordicsemi.android.kotlin.ble", name = "core", version.ref = "nordic-blek" }
 nordic-blek-scanner = { group = "no.nordicsemi.android.kotlin.ble", name = "scanner", version.ref = "nordic-blek" }
 nordic-blek-advertiser = { group = "no.nordicsemi.android.kotlin.ble", name = "advertiser", version.ref = "nordic-blek" }
+nordic-blek-uiscanner = { group = "no.nordicsemi.android.kotlin.ble", name = "uiscanner", version.ref = "nordic-blek" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
