--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,10 +59,7 @@ slf4j = "1.7.36" # don't update to 2.x, unless the next one is also updated
 slf4j-timber = "3.1" # <- this one
 robolectric = "4.12.2"
 skydovesBallon = "1.6.5"
-moshiKotlin = "1.15.1"
-moshiAdapters = "1.15.1"
 moshi = "1.15.1"
-moshiKotlinCodegen = "1.15.1"
 material3 = "1.3.0-beta03"
 material = "1.6.8"
 koinCore = "3.5.6"
@@ -199,10 +196,10 @@ slf4j-timber = { group = "com.arcao", name = "slf4j-timber", version.ref = "slf4
 test-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 test-robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 skydoves-ballon = { group = "com.github.skydoves", name = "balloon-compose", version.ref = "skydovesBallon" }
-moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiKotlin" }
-moshi-adapters = { group = "com.squareup.moshi", name = "moshi-adapters", version.ref = "moshiAdapters" }
 moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
-moshi-kotlin-codegen = { group = "com.squareup.moshi", name = "moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
+moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi" }
+moshi-adapters = { group = "com.squareup.moshi", name = "moshi-adapters", version.ref = "moshi" }
+moshi-kotlin-codegen = { group = "com.squareup.moshi", name = "moshi-kotlin-codegen", version.ref = "moshi" }
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koinCore" }
 koin-compose = { group = "io.insert-koin", name = "koin-compose", version.ref = "koinCompose" }
 kmm-uuid = { group = "com.benasher44", name = "uuid", version.ref = "kmmUuid" }
