--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,7 +45,7 @@ protobuf = "4.27.1"
 protobufPlugin = "0.9.4"
 publishPlugin = "1.2.1"
 retrofit = "2.11.0"
-room = "2.6.1"
+room = "2.7.0-alpha04"
 paging = "3.3.0"
 secrets = "2.0.1"
 turbine = "1.1.0"
