Excluding SLF4J versions from Renovate

--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,7 @@
     {
       "matchPackageNames": [
         "org.slf4j:slf4j-api",
+        "org.slf4j:slf4j-nop",
         "org.slf4j:slf4j-simple"
       ],
       "enabled": false
