--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,7 +49,7 @@ room = "2.7.0-alpha04"
 paging = "3.3.0"
 secrets = "2.0.1"
 turbine = "1.1.0"
-markdown = "0.4.1"
+markdown = "0.5.0" # https://github.com/jeziellago/compose-markdown/releases
 wirePlugin = "4.9.9"
 timber = "5.0.1"
 chart = "v3.1.0"
