Nordic common lib updated to 2.1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -78,7 +78,7 @@ nordic-data = "0.2.0"
 nordic-wifi = "1.1.1"
 nordic-mcumgr = "2.1.0"
 nordic-scanner = "1.6.0"
-nordic-common = "2.0.0"
+nordic-common = "2.1.0"
 nordic-memfault = "1.0.2"
 nordicPlugins = "2.4"
 dokkaPlugin = "1.9.20"
@@ -230,6 +230,7 @@ nordic-permissions-nfc = { group = "no.nordicsemi.android.common", name = "permi
 nordic-permissions-ble = { group = "no.nordicsemi.android.common", name = "permissions-ble", version.ref = "nordic-common" }
 nordic-permissions-internet = { group = "no.nordicsemi.android.common", name = "permissions-internet", version.ref = "nordic-common" }
 nordic-permissions-wifi = { group = "no.nordicsemi.android.common", name = "permissions-wifi", version.ref = "nordic-common" }
+nordic-permissions-notification = { group = "no.nordicsemi.android.common", name = "permissions-notification", version.ref = "nordic-common" }
 nordic-wifi-ble = { group = "no.nordicsemi.android.wifi", name = "provisioning-ble", version.ref = "nordic-wifi" }
 nordic-wifi-softap = { group = "no.nordicsemi.android.wifi", name = "provisioning-softap", version.ref = "nordic-wifi" }
 nordic-wifi-nfc = { group = "no.nordicsemi.android.wifi", name = "provisioning-nfc", version.ref = "nordic-wifi" }
