--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-accompanist = "0.36.0"
-androidDesugarJdkLibs = "2.1.2"
 androidGradlePlugin = "8.6.0"
+kotlin = "2.0.20"
+ksp = "2.0.20-1.0.25"
 androidxActivity = "1.9.2"
 androidxAnnotation = "1.8.2"
 androidxAppCompat = "1.7.0"
@@ -27,17 +27,17 @@ androidxTestRules = "1.6.1"
 androidxTracing = "1.2.0"
 androidxUiAutomator = "2.3.0"
 androidxWork = "2.9.1"
+androidDesugarJdkLibs = "2.1.2"
+accompanist = "0.36.0"
 coil = "2.7.0"
 firebaseBom = "33.2.0"
 hilt = "2.52"
 hiltExt = "1.2.0"
 junit4 = "4.13.2"
-kotlin = "2.0.20"
 kotlinxCoroutines = "1.9.0-RC.2"
 kotlinxDatetime = "0.6.1"
 kotlinxSerializationJson = "1.7.2"
 kotlinCompose = "1.6.11"
-ksp = "2.0.20-1.0.25"
 lint = "31.6.0"
 memfault-cloud = "2.0.5"
 okhttp = "5.0.0-alpha.14"
@@ -61,8 +61,6 @@ slf4j-timber = "1.1"
 robolectric = "4.13"
 skydovesBallon = "1.6.7"
 moshi = "1.15.1"
-material3 = "1.3.0"
-material = "1.7.1"
 koinCore = "3.5.6"
 koinCompose = "1.1.5"
 kmmUuid = "0.8.4"
@@ -80,10 +78,11 @@ nordic-mcumgr = "2.1.0"
 nordic-scanner = "1.6.0"
 nordic-common = "2.1.0"
 nordic-memfault = "1.0.2"
+
 nordicPlugins = "2.4"
 dokkaPlugin = "1.9.20"
-googleServicesPlugins = "4.4.0"
-firebaseCrashlyticsPlugins = "2.9.9"
+googleServicesPlugins = "4.4.2"
+firebaseCrashlyticsPlugins = "3.0.2"
 kmmIosPublishPlugin = "2.0.3"
 
 [libraries]
@@ -98,8 +97,8 @@ androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-mac
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
-androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+androidx-compose-material = { group = "androidx.compose.material", name = "material" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-compose-material3-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
