Adding 2 more BLEK modules, refactoring to add "android"

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -238,10 +238,12 @@ nordic-wifi-nfc = { group = "no.nordicsemi.android.wifi", name = "provisioning-n
 nordic-memfault = { group = "no.nordicsemi.android", name = "memfault", version.ref = "nordic-memfault" }
 
 # BleK
-nordic-blek-client = { group = "no.nordicsemi.kotlin.ble", name = "client-android", version.ref = "nordic-blek" }
-nordic-blek-client-mock = { group = "no.nordicsemi.kotlin.ble", name = "client-android-mock", version.ref = "nordic-blek" }
-nordic-blek-advertiser = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android", version.ref = "nordic-blek" }
-nordic-blek-advertiser-mock = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android-mock", version.ref = "nordic-blek" }
+nordic-blek-client-core = { group = "no.nordicsemi.kotlin.ble", name = "client-core", version.ref = "nordic-blek" }
+nordic-blek-client-android = { group = "no.nordicsemi.kotlin.ble", name = "client-android", version.ref = "nordic-blek" }
+nordic-blek-client-android-mock = { group = "no.nordicsemi.kotlin.ble", name = "client-android-mock", version.ref = "nordic-blek" }
+nordic-blek-advertiser-core = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android-core", version.ref = "nordic-blek" }
+nordic-blek-advertiser-android = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android", version.ref = "nordic-blek" }
+nordic-blek-advertiser-android-mock = { group = "no.nordicsemi.kotlin.ble", name = "advertiser-android-mock", version.ref = "nordic-blek" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
