--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 androidGradlePlugin = "8.11.1"
-kotlin = "2.2.0"
+kotlin = "2.2.0" # When changes, update also kotlinAndroid.kt
 ksp = "2.2.0-2.0.2"
 androidxActivity = "1.10.1"
 androidxAnnotation = "1.9.1"
