Skip Room and Hilt compiler in Renovate updates (bumped to min API 23)

--- a/renovate.json
+++ b/renovate.json
@@ -18,8 +18,8 @@
     {
       "matchPackageNames": [
         "com.google.firebase:firebase-bom",
-        "androidx.room",
-        "androidx.hilt"
+        "/androidx.room/",
+        "/androidx.hilt/"
       ],
       "enabled": false
     }
