--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ androidxCoreSplashscreen = "1.2.0"
 androidxDataStore = "1.2.0"
 androidxEspresso = "3.7.0"
 androidxFragment = "1.8.9"
-androidxHiltNavigationCompose = "1.2.0"
+androidxHiltNavigationCompose = "1.3.0"
 androidxLifecycle = "2.10.0"
 androidxLocalbroadcastmanager = "1.1.0"
 androidxMacroBenchmark = "1.4.1"
@@ -38,7 +38,7 @@ accompanist = "0.37.3"
 accompanistPlaceholder = "0.36.0"
 coil = "2.7.0"
 dagger = "2.57.2"
-firebaseBom = "33.16.0" # https://firebase.google.com/support/release-notes/android#2025-07-21 minSdkVersion increased from 21 to 23
+firebaseBom = "34.6.0"
 hilt = "2.57.2"
 hiltExt = "1.2.0"
 junit4 = "4.13.2"
@@ -55,7 +55,7 @@ protobuf = "4.33.2"
 protobufPlugin = "0.9.5"
 publishPlugin = "2.0.0"
 retrofit = "3.0.0"
-room = "2.7.2"
+room = "2.8.4"
 paging = "3.3.6"
 secrets = "2.0.1"
 turbine = "1.2.1"
@@ -80,7 +80,7 @@ gson = "2.13.2"
 fasterxml = "2.13.5" # don't update
 
 # Plugin versions
-nordicPlugins = "2.11"
+nordicPlugins = "2.12"
 dokkaPlugin = "2.1.0"
 googleServicesPlugins = "4.4.2"
 firebaseCrashlyticsPlugins = "3.0.2"
