Hilt navigation downgraded to 1.2.0 (due to minSdk)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ androidxCoreSplashscreen = "1.2.0"
 androidxDataStore = "1.2.0"
 androidxEspresso = "3.7.0"
 androidxFragment = "1.8.9"
-androidxHiltNavigationCompose = "1.3.0"
+androidxHiltNavigationCompose = "1.2.0" # Don't update
 androidxLifecycle = "2.9.4" # Don't update
 androidxLocalbroadcastmanager = "1.1.0"
 androidxMacroBenchmark = "1.4.1"
