kotlin-multiplatform-library plugin added

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -256,6 +256,7 @@ nordic-dokka = { id = "no.nordicsemi.plugin.dokka", version.ref = "nordicPlugins
 # External Plugins
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "androidGradlePlugin" }
 android-test = { id = "com.android.test", version.ref = "androidGradlePlugin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
