Reverting datastore to 1.1.7 due to minSdk

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidxComposeBom = "2025.10.00" # https://developer.android.com/jetpack/compos
 androidxComposeRuntimeTracing = "1.9.3"
 androidxCore = "1.17.0"
 androidxCoreSplashscreen = "1.2.0"
-androidxDataStore = "1.2.0"
+androidxDataStore = "1.1.7" # Don't update
 androidxEspresso = "3.7.0"
 androidxFragment = "1.8.9"
 androidxHiltNavigationCompose = "1.2.0" # Don't update
